# personal_server

./: .dockerignore  .env.dev  .env.example  .env.prod.example  .gitguardian.yaml  .gitignore  .gitleaks.toml  Claude.md  Dockerfile  Makefile  README.md  SECURITY.md  config.py  database.py  dependencies.py  docker-compose.dev.yml  docker-compose.prod.yml  main.py  middleware.py  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: quality.yml  security.yml
PRPs/: authentication-migration-strategy.md  containerization-docker-compose.md  crawl4ai-endpoint.md  fastapi-users-authentication.md  fastmcp-integration.md  geocoding-endpoint.md  github-actions-quality-workflow.md  mcp-jwt-bearer-authentication.md  pip-to-uv-migration.md
PRPs/templates/: prp-base.md
ai_info/app/docs/: ci-cd-patterns.md  crawling-implementation.md  geocoding-implementation.md  mcp-implementation.md
ai_info/docs/: conventional_commits.md  crawl4ai.md  fastapi-best-practices.md  fastapi-users.md  fastapi.md  fastmcp.md  fasttapi.md  nominatim.md  owasp.md  pydantic-ai.md  pydantic.md  ruff.md  sqlalchemy.md
alembic/: env.py
alembic/versions/: 62554cc3793d_add_users_table.py
auth/: backend.py  user_manager.py  users.py
bruno/FastAPI Application/: Clear Geocoding Cache.bru  Geocode City.bru  Geocoding Health Check.bru  Health Check.bru  Protected Data.bru  Protected Endpoint.bru  bruno.json  collection.bru
bruno/FastAPI Application/Crawl/: Clear Crawling Cache.bru  Crawl Link Extraction.bru  Crawl Single URL Markdown.bru  Crawl URLs.bru  Crawl with Screenshots.bru  Crawling Health Check.bru  folder.bru
bruno/FastAPI Application/Geocoding/: Clear Geocoding Cache.bru  Geocode City.bru  Geocoding Health Check.bru  folder.bru
bruno/FastAPI Application/environments/: Localhost.bru
mcp_integration/: __init__.py  server.py
mcp_integration/tests/: test_mcp_geocoding.py
mcp_integration/tools/: geocoding.py
models/: __init__.py  crawling.py  geocoding.py  user.py
routers/: __init__.py  crawling.py  geocoding.py  mcp_auth.py
schemas/: user.py
services/: __init__.py  cache.py  crawl_cache.py  crawling.py  geocoding.py  mcp_auth.py  mcp_rsa_keys.py  rate_limiter.py
tests/: conftest.py  test_cache.py  test_crawl_cache.py  test_crawling_service.py  test_geocoding_service.py  test_integration.py  test_mcp_auth.py  test_mcp_auth_integration.py  test_mcp_rsa_keys.py  test_rate_limiter.py  test_unit.py
utils/: logging.py
